# kitty-crowd

./: Dockerfile  README.md  pyproject.toml
.github/workflows/: deploy.yml
kitty_crowd/: main.py
src/kitty_crowd/: main.py
terraform/: cluster.tf  kitty_crowd.tf  main.tf  outputs.tf  variables.tf
